Fixed spacing for history button. Adjusted size of history graph.

--- a/sass/default.scss
+++ b/sass/default.scss
@@ -295,12 +295,11 @@ body {
 }
 
 .open-history {
-  margin-bottom: 10px;
-  float: left;
-  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 40px;
   display: block;
-  width: 70px;
-  margin-top: 10px;
+  width: 100px;  
 }
 
 .show-increase {
@@ -353,7 +352,7 @@ body {
 }
 
 .history-instrument {
-  margin-left: 190px;
+  margin-left: 140px;
   display: inline-block;
   font-family: helvetica;
   font-weight: 700;
@@ -369,7 +368,7 @@ body {
 }
 
 .graph-flag {
-  margin-left: 180px;
+  margin-left: 130px;
   text-align: left;
   width: 120px;
   height: 40px;
